fix export employee